packages/verse-core/verse_core-0.0.29-py3-none-any.whl/verse/ql/generated/VerseQLParser.py
# flake8: noqa
# type: ignore
# Generated from verse/ql/grammar/VerseQLParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class VerseQLParser ( Parser ):

    grammarFileName = "VerseQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'AND'", "'AS'", "'ASC'", "'BETWEEN'", 
                     "'BY'", "'COLLECTION'", "'DESC'", "'END'", "'FALSE'", 
                     "'FROM'", "'IN'", "'INTO'", "'NOT'", "'NULL'", "'OR'", 
                     "'ORDER'", "'SEARCH'", "'SELECT'", "'SET'", "'TRUE'", 
                     "'WHERE'", "','", "'+'", "'-'", "'*'", "'.'", "'?'", 
                     "'<'", "'<='", "'>'", "'>='", "'='", "<INVALID>", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "':'", "';'", "'@'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "AND", "AS", "ASC", "BETWEEN", "BY", 
                      "COLLECTION", "DESC", "END", "FALSE", "FROM", "IN", 
                      "INTO", "NOT", "NULL", "OR", "ORDER", "SEARCH", "SELECT", 
                      "SET", "TRUE", "WHERE", "COMMA", "PLUS", "MINUS", 
                      "STAR", "DOT", "QUESTION_MARK", "LT", "LT_EQ", "GT", 
                      "GT_EQ", "EQ", "NEQ", "BRACKET_LEFT", "BRACKET_RIGHT", 
                      "BRACE_LEFT", "BRACE_RIGHT", "PAREN_LEFT", "PAREN_RIGHT", 
                      "COLON", "SEMI_COLON", "AT", "SLASH", "LITERAL_STRING_SINGLE", 
                      "LITERAL_STRING_DOUBLE", "LITERAL_INTEGER", "LITERAL_DECIMAL", 
                      "IDENTIFIER", "WS", "COMMENT_SINGLE_LINE", "COMMENT_MULTILINE", 
                      "UNRECOGNIZED" ]

    RULE_parse_statement = 0
    RULE_parse_search = 1
    RULE_parse_where = 2
    RULE_parse_select = 3
    RULE_parse_collection = 4
    RULE_parse_order_by = 5
    RULE_parse_update = 6
    RULE_statement = 7
    RULE_clause = 8
    RULE_generic_clause = 9
    RULE_select_clause = 10
    RULE_select = 11
    RULE_select_term = 12
    RULE_collection_clause = 13
    RULE_collection = 14
    RULE_search_clause = 15
    RULE_where_clause = 16
    RULE_expression = 17
    RULE_operand = 18
    RULE_order_by_clause = 19
    RULE_order_by = 20
    RULE_order_by_term = 21
    RULE_set_clause = 22
    RULE_update = 23
    RULE_update_operation = 24
    RULE_function = 25
    RULE_function_args = 26
    RULE_named_arg = 27
    RULE_ref = 28
    RULE_ref_path = 29
    RULE_parameter = 30
    RULE_field = 31
    RULE_field_path = 32
    RULE_field_primitive = 33
    RULE_value = 34
    RULE_literal_string = 35
    RULE_array = 36
    RULE_json = 37
    RULE_json_obj = 38
    RULE_json_pair = 39
    RULE_json_arr = 40
    RULE_json_value = 41
    RULE_json_string = 42
    RULE_json_number = 43

    ruleNames =  [ "parse_statement", "parse_search", "parse_where", "parse_select", 
                   "parse_collection", "parse_order_by", "parse_update", 
                   "statement", "clause", "generic_clause", "select_clause", 
                   "select", "select_term", "collection_clause", "collection", 
                   "search_clause", "where_clause", "expression", "operand", 
                   "order_by_clause", "order_by", "order_by_term", "set_clause", 
                   "update", "update_operation", "function", "function_args", 
                   "named_arg", "ref", "ref_path", "parameter", "field", 
                   "field_path", "field_primitive", "value", "literal_string", 
                   "array", "json", "json_obj", "json_pair", "json_arr", 
                   "json_value", "json_string", "json_number" ]

    EOF = Token.EOF
    AND=1
    AS=2
    ASC=3
    BETWEEN=4
    BY=5
    COLLECTION=6
    DESC=7
    END=8
    FALSE=9
    FROM=10
    IN=11
    INTO=12
    NOT=13
    NULL=14
    OR=15
    ORDER=16
    SEARCH=17
    SELECT=18
    SET=19
    TRUE=20
    WHERE=21
    COMMA=22
    PLUS=23
    MINUS=24
    STAR=25
    DOT=26
    QUESTION_MARK=27
    LT=28
    LT_EQ=29
    GT=30
    GT_EQ=31
    EQ=32
    NEQ=33
    BRACKET_LEFT=34
    BRACKET_RIGHT=35
    BRACE_LEFT=36
    BRACE_RIGHT=37
    PAREN_LEFT=38
    PAREN_RIGHT=39
    COLON=40
    SEMI_COLON=41
    AT=42
    SLASH=43
    LITERAL_STRING_SINGLE=44
    LITERAL_STRING_DOUBLE=45
    LITERAL_INTEGER=46
    LITERAL_DECIMAL=47
    IDENTIFIER=48
    WS=49
    COMMENT_SINGLE_LINE=50
    COMMENT_MULTILINE=51
    UNRECOGNIZED=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Parse_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(VerseQLParser.StatementContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_statement" ):
                listener.enterParse_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_statement" ):
                listener.exitParse_statement(self)




    def parse_statement(self):

        localctx = VerseQLParser.Parse_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.statement()
            self.state = 89
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_searchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VerseQLParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_search

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_search" ):
                listener.enterParse_search(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_search" ):
                listener.exitParse_search(self)




    def parse_search(self):

        localctx = VerseQLParser.Parse_searchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parse_search)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.expression(0)
            self.state = 92
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_whereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VerseQLParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_where

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_where" ):
                listener.enterParse_where(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_where" ):
                listener.exitParse_where(self)




    def parse_where(self):

        localctx = VerseQLParser.Parse_whereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parse_where)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.expression(0)
            self.state = 95
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_selectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select(self):
            return self.getTypedRuleContext(VerseQLParser.SelectContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_select" ):
                listener.enterParse_select(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_select" ):
                listener.exitParse_select(self)




    def parse_select(self):

        localctx = VerseQLParser.Parse_selectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parse_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.select()
            self.state = 98
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_collectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def collection(self):
            return self.getTypedRuleContext(VerseQLParser.CollectionContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_collection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_collection" ):
                listener.enterParse_collection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_collection" ):
                listener.exitParse_collection(self)




    def parse_collection(self):

        localctx = VerseQLParser.Parse_collectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parse_collection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.collection()
            self.state = 101
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_order_byContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def order_by(self):
            return self.getTypedRuleContext(VerseQLParser.Order_byContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_order_by

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_order_by" ):
                listener.enterParse_order_by(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_order_by" ):
                listener.exitParse_order_by(self)




    def parse_order_by(self):

        localctx = VerseQLParser.Parse_order_byContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parse_order_by)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.order_by()
            self.state = 104
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parse_updateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def update(self):
            return self.getTypedRuleContext(VerseQLParser.UpdateContext,0)


        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse_update" ):
                listener.enterParse_update(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse_update" ):
                listener.exitParse_update(self)




    def parse_update(self):

        localctx = VerseQLParser.Parse_updateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parse_update)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.update()
            self.state = 107
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VerseQLParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Statement_multiContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerseQLParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerseQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(VerseQLParser.StatementContext,i)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(VerseQLParser.SEMI_COLON)
            else:
                return self.getToken(VerseQLParser.SEMI_COLON, i)
        def END(self):
            return self.getToken(VerseQLParser.END, 0)
        def IDENTIFIER(self):
            return self.getToken(VerseQLParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_multi" ):
                listener.enterStatement_multi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_multi" ):
                listener.exitStatement_multi(self)


    class Statement_singleContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerseQLParser.StatementContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(VerseQLParser.IDENTIFIER, 0)
        def clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerseQLParser.ClauseContext)
            else:
                return self.getTypedRuleContext(VerseQLParser.ClauseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_single" ):
                listener.enterStatement_single(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_single" ):
                listener.exitStatement_single(self)



    def statement(self):

        localctx = VerseQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = VerseQLParser.Statement_singleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                localctx.op = self.match(VerseQLParser.IDENTIFIER)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474979796032) != 0):
                    self.state = 110
                    self.clause()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = VerseQLParser.Statement_multiContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                localctx.op = self.match(VerseQLParser.IDENTIFIER)
                self.state = 117
                self.statement()
                self.state = 118
                self.match(VerseQLParser.SEMI_COLON)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==48:
                    self.state = 119
                    self.statement()
                    self.state = 120
                    self.match(VerseQLParser.SEMI_COLON)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(VerseQLParser.END)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Select_clauseContext,0)


        def collection_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Collection_clauseContext,0)


        def set_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Set_clauseContext,0)


        def search_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Search_clauseContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Where_clauseContext,0)


        def order_by_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Order_by_clauseContext,0)


        def generic_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Generic_clauseContext,0)


        def getRuleIndex(self):
            return VerseQLParser.RULE_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause" ):
                listener.enterClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause" ):
                listener.exitClause(self)




    def clause(self):

        localctx = VerseQLParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_clause)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.select_clause()
                pass
            elif token in [6, 10, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.collection_clause()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.set_clause()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.search_clause()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.where_clause()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 136
                self.order_by_clause()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.generic_clause()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Generic_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def operand(self):
            return self.getTypedRuleContext(VerseQLParser.OperandContext,0)


        def IDENTIFIER(self):
            return self.getToken(VerseQLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_generic_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneric_clause" ):
                listener.enterGeneric_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneric_clause" ):
                listener.exitGeneric_clause(self)




    def generic_clause(self):

        localctx = VerseQLParser.Generic_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_generic_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            localctx.name = self.match(VerseQLParser.IDENTIFIER)
            self.state = 141
            self.operand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(VerseQLParser.SELECT, 0)

        def select(self):
            return self.getTypedRuleContext(VerseQLParser.SelectContext,0)


        def getRuleIndex(self):
            return VerseQLParser.RULE_select_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_clause" ):
                listener.enterSelect_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_clause" ):
                listener.exitSelect_clause(self)




    def select_clause(self):

        localctx = VerseQLParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_select_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(VerseQLParser.SELECT)
            self.state = 144
            self.select()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VerseQLParser.RULE_select

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Select_parameterContext(SelectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerseQLParser.SelectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parameter(self):
            return self.getTypedRuleContext(VerseQLParser.ParameterContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_parameter" ):
                listener.enterSelect_parameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_parameter" ):
                listener.exitSelect_parameter(self)


    class Select_termsContext(SelectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerseQLParser.SelectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def select_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerseQLParser.Select_termContext)
            else:
                return self.getTypedRuleContext(VerseQLParser.Select_termContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VerseQLParser.COMMA)
            else:
                return self.getToken(VerseQLParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_terms" ):
                listener.enterSelect_terms(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_terms" ):
                listener.exitSelect_terms(self)


    class Select_allContext(SelectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VerseQLParser.SelectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STAR(self):
            return self.getToken(VerseQLParser.STAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_all" ):
                listener.enterSelect_all(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_all" ):
                listener.exitSelect_all(self)



    def select(self):

        localctx = VerseQLParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = VerseQLParser.Select_allContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(VerseQLParser.STAR)
                pass
            elif token in [48]:
                localctx = VerseQLParser.Select_termsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.select_term()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==22:
                    self.state = 148
                    self.match(VerseQLParser.COMMA)
                    self.state = 149
                    self.select_term()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [42]:
                localctx = VerseQLParser.Select_parameterContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.parameter()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VerseQLParser.FieldContext)
            else:
                return self.getTypedRuleContext(VerseQLParser.FieldContext,i)


        def AS(self):
            return self.getToken(VerseQLParser.AS, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_select_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_term" ):
                listener.enterSelect_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_term" ):
                listener.exitSelect_term(self)




    def select_term(self):

        localctx = VerseQLParser.Select_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_select_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.field()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 159
                self.match(VerseQLParser.AS)
                self.state = 160
                self.field()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Collection_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def collection(self):
            return self.getTypedRuleContext(VerseQLParser.CollectionContext,0)


        def COLLECTION(self):
            return self.getToken(VerseQLParser.COLLECTION, 0)

        def FROM(self):
            return self.getToken(VerseQLParser.FROM, 0)

        def INTO(self):
            return self.getToken(VerseQLParser.INTO, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_collection_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollection_clause" ):
                listener.enterCollection_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollection_clause" ):
                listener.exitCollection_clause(self)




    def collection_clause(self):
